--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=hostip
+DB_HOST=34.121.142.82
 DB_PORT=3306
-DB_NAME=my_database
+DB_NAME=Assignment_2
 DB_USER=root
-DB_PASS=password
+DB_PASS=rootadmin
